# multimodal-sentiment-analyzer

./: .gitignore  pyproject.toml
training/: models.py
